--- a/exercises/juggle-garden/index.html
+++ b/exercises/juggle-garden/index.html
@@ -16,6 +16,7 @@
     <!-- My script(s) -->
     <script src="js/paddle.js"></script>
     <script src="js/ball.js"></script>
+    <script src="js/enemy.js"></script>
     <script src="js/script.js"></script>
   </head>
 
