--- a/exercises/make-some-noise/index.html
+++ b/exercises/make-some-noise/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>Make some noise!</title>
+    <title>Footstep simulator!</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -14,7 +14,7 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
-    <script src="js/ball.js"></script>
+    <script src="js/footstep.js"></script>
     <script src="js/script.js"></script>
   </head>
 
