--- a/projects/project2/final/index.html
+++ b/projects/project2/final/index.html
@@ -15,6 +15,7 @@
 
     <!-- My script(s) -->
     <script src="js/collider.js"></script>
+    <script src="js/bullet.js"></script>
     <script src="js/user.js"></script>
     <script src="js/enemy.js"></script>
     <script src="js/wall.js"></script>
