--- a/projects/project2/demo/index.html
+++ b/projects/project2/demo/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>Demo!</title>
+    <title>DEMO</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -14,6 +14,8 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/collider.js"></script>
+    <script src="js/bullet.js"></script>
     <script src="js/user.js"></script>
     <script src="js/enemy.js"></script>
     <script src="js/wall.js"></script>
